src/styles/_navigation.scss
@use 'menus';
@use 'responsive' as *;

// Header navigation styling
@use 'sass:math';

.site-header-nav {
  --site-header-nav-link-padding-v: 15px;
  --site-header-nav-link-padding-h: 15px;
  flex-grow: 1;
  position: relative;
  clear: both;
  text-align: right;
  white-space: nowrap;
  vertical-align: middle;
}

.site-header-nav-list {
  .site-header-nav-list-background {
    display: none;
  }
  li {
    display: inline-block;
    position: relative;
    // Underline for nav link representing current page
    &:after {
      content: '';
      opacity: 0;
      position: absolute;
      top: 100%;
      left: 50%;
      transform: translateX(-50%) translateY(-10px);
      width: 0;
      height: 2px;
      background-color: var(--color-text);
      transition: all 250ms ease-in-out;
      transition-property: width, opacity;
    }
    &.is-current-page {
      position: relative;
      &:after {
        opacity: 1;
        width: calc(100% - (var(--site-header-nav-link-padding-h) * 2));
      }
    }
    a {
      color: currentColor;
      display: block;
      font-weight: var(--font-weight-light);
      font-size: var(--font-size-l);
      line-height: 1;
      padding: var(--site-header-nav-link-padding-v) var(--site-header-nav-link-padding-h);
      text-decoration: none;
    }
  }
  @include layout(hybrid) {
    isolation: isolate;
    pointer-events: none;
    transform: translateY(-20px);
    @include menus.floating-menu(7px);
    .site-header-nav & {
      padding: calc(var(--menu-arrow-height) + var(--menu-border-width)) 0 0;
    }
    .site-header-nav-list-background {
      display: block;
      position: absolute;
      inset: 0;
      width: 100%;
      height: 100%;
      overflow: visible;
      pointer-events: none;
      stroke-linejoin: round;
      z-index: -1;
    }
    li {
      z-index: 1;
      display: block;
    }
    li:after {
      display: none;
    }
    // Open navigation menu when the toggle button is focused or if any of the
    // menu contents are focused
    .site-header-nav:focus-within & {
      pointer-events: auto;
      @include menus.transition-fade-in();
      transform: translateY(0);
    }
  }
}

// Navigation menu toggle for hybrid/compact layout
.site-header-nav-toggle {
  display: none;
  @include layout(hybrid) {
    cursor: pointer;
    display: inline-block;
    margin: 0;
    padding: 9px;
    &,
    &:hover,
    &:focus,
    &:active {
      background: none;
      border-width: 0;
      color: currentColor;
    }
    img,
    svg {
      --icon-size: 32px;
      width: var(--icon-size);
      height: var(--icon-size);
    }
  }
}

